# pyproject.toml file for building Vowpal Wabbit python wheels

[build-system]
requires = [
    "setuptools",
    "wheel",
    "cmake",
    "ninja",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]  # Python 3.10-3.14 with pybind11
skip = [
    "*musllinux*",  # Only build manylinux wheels
]
# Skip ARM64 tests: Even with conservative build flags (-mno-outline-atomics, -march=armv8-a),
# tests fail with illegal instruction. Root cause: System Boost libraries from dnf contain
# LSE atomics and SVE instructions compiled for newer ARM CPUs. Wheels build successfully with
# baseline ARMv8.0 flags and should work on all ARM64 systems.
test-skip = "*-manylinux_aarch64"
test-requires = ["pytest", "pyclean", "vw-executor", "setuptools", "scipy", "scikit-learn"]
# Exclude e2e_v2 tests: vw_executor's _VwPy class uses multiprocessing.Pool(1) for isolation,
# which causes fork/pybind11 deadlocks. These tests require a VW CLI binary (path parameter)
# to avoid the Python-based executor. Run e2e_v2 locally with: pytest python/tests/e2e_v2
test-command = [
    "cd {project} && pyclean python/tests && pytest python/tests -v -s --ignore=python/tests/e2e_v2",
]

[tool.cibuildwheel.linux]
before-all = [
    # Install build tools and development packages
    # cibuildwheel runs in Red Hat based Linux container environment (AlmaLinux 8)
    "dnf install -y cmake ninja-build zlib-devel",
    # Install pybind11
    "python -m pip install pybind11",
]
before-build = []
# Use vendored zlib (VW_ZLIB_SYS_DEP=OFF) for self-contained wheels that auditwheel can properly tag
# Enable SIMD optimizations (VW_FEAT_LAS_SIMD=ON) for x64 builds - disabled for ARM64 in override below
# pybind11_DIR is automatically detected by setup.py
environment = { CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF -DVW_FEAT_LAS_SIMD=ON" }

[tool.cibuildwheel.macos]
before-all = [
    # Install build tools via Homebrew
    "brew install cmake ninja",
    # Install pybind11
    "python -m pip install pybind11",
]
test-command = [
    "cd {project} && pyclean python/tests && pytest python/tests -v -s --ignore=python/tests/e2e_v2",
]
# Use macOS 11.0+ for compatibility
# pybind11_DIR is automatically detected by setup.py
environment = { MACOSX_DEPLOYMENT_TARGET="11.0", CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"

[tool.cibuildwheel.windows]
before-all = [
    # Initialize vcpkg submodule and update to get latest ports
    "git submodule update --init --recursive ext_libs\\vcpkg && cd ext_libs\\vcpkg && git pull origin master && cd ..\\..",
    # Install pybind11 and zlib with x64-windows triplet
    "cd ext_libs\\vcpkg && .\\bootstrap-vcpkg.bat && .\\vcpkg install pybind11:x64-windows zlib:x64-windows --classic --no-print-usage",
]
environment = { CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF" }

# Override for ARM64 Linux builds to use conservative architecture flags
# -mno-outline-atomics: Prevents GCC from using LSE atomic instructions (ARMv8.1+) which cause illegal instruction on older CPUs
# -march=armv8-a: Baseline ARMv8.0 instruction set only (NEON is part of baseline and safe to use)
# -mtune=generic: Don't optimize for specific CPU variant
[[tool.cibuildwheel.overrides]]
select = "*-manylinux_*_aarch64"
# pybind11_DIR is automatically detected by setup.py
environment = { CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF -DVW_FEAT_LAS_SIMD=OFF -DCMAKE_CXX_FLAGS='-march=armv8-a -mtune=generic -mno-outline-atomics' -DCMAKE_C_FLAGS='-march=armv8-a -mtune=generic -mno-outline-atomics'" }
