# pyproject.toml file for building Vowpal Wabbit python wheels

[build-system]
requires = [
    "setuptools",
    "wheel",
    "cmake",
    "ninja",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]  # Python 3.10-3.14 with pybind11
skip = [
    "*musllinux*",  # Only build manylinux wheels
    "*-win32",  # Skip 32-bit Windows builds - scipy doesn't have 32-bit prebuilt wheels
]
# ARM64 tests enabled - pybind11 migration removes Boost dependency that was causing illegal instruction
# test-skip = "*-manylinux_aarch64"  # Removed to enable ARM64 testing
test-requires = ["pytest", "pyclean", "vw-executor", "setuptools", "scipy", "scikit-learn"]
# Exclude e2e_v2: vw_executor uses multiprocessing.Pool(1) which hangs in GitHub Actions containers
# due to pybind11 fork safety issues. Tests pass locally but hang in CI container environment.
test-command = [
    "pyclean {project}/python/tests",
    "pytest {project}/python/tests --ignore={project}/python/tests/e2e_v2",
]
test-sources = "test/"

[tool.cibuildwheel.linux]
before-all = [
    # Install build tools and development packages
    # cibuildwheel runs in Red Hat based Linux container environment (AlmaLinux 8)
    "dnf install -y cmake ninja-build zlib-devel",
    # Install pybind11
    "python -m pip install pybind11",
]
before-build = []
# Use vendored zlib (VW_ZLIB_SYS_DEP=OFF) for self-contained wheels that auditwheel can properly tag
# Enable SIMD optimizations (VW_FEAT_LAS_SIMD=ON) for x64 builds - disabled for ARM64 in override below
# pybind11_DIR is automatically detected by setup.py
environment = { CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF -DVW_FEAT_LAS_SIMD=ON" }

[tool.cibuildwheel.macos]
before-all = [
    # Install build tools via Homebrew
    "brew install cmake ninja",
    # Install pybind11
    "python -m pip install pybind11",
]
test-command = [
    "pyclean {project}/python/tests",
    "pytest {project}/python/tests --ignore={project}/python/tests/e2e_v2",
]
# Use macOS 11.0+ for compatibility
# pybind11_DIR is automatically detected by setup.py
environment = { MACOSX_DEPLOYMENT_TARGET="11.0", CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"

[tool.cibuildwheel.windows]
before-all = [
    # Install pybind11 via pip - setup.py will detect it automatically
    "pip install pybind11",
]
# Use vendored zlib (VW_ZLIB_SYS_DEP=OFF) for self-contained wheels
# pybind11_DIR is automatically detected by setup.py
# CMAKE_GENERATOR specifies Visual Studio 2019 (available on windows-2019 runner)
environment = { CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF", CMAKE_GENERATOR="Visual Studio 16 2019" }

# Override for ARM64 Linux builds to use conservative architecture flags
# -mno-outline-atomics: Prevents GCC from using LSE atomic instructions (ARMv8.1+) which cause illegal instruction on older CPUs
# -march=armv8-a: Baseline ARMv8.0 instruction set only (NEON is part of baseline and safe to use)
# -mtune=generic: Don't optimize for specific CPU variant
[[tool.cibuildwheel.overrides]]
select = "*_aarch64"
before-test = [
    # Diagnostic: Check CPU features and verify pybind11-based module
    "echo '=== ARM64 Diagnostic: CPU Features ===' && cat /proc/cpuinfo | grep -E '^(Features|CPU)' | head -5 || true",
    "echo '=== ARM64 Diagnostic: Testing imports ===' && python -c 'import sys; print(f\"Python {sys.version}\")' || true",
]
# pybind11_DIR is automatically detected by setup.py
environment = { CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF -DVW_FEAT_LAS_SIMD=OFF -DCMAKE_CXX_FLAGS='-march=armv8-a -mtune=generic -mno-outline-atomics' -DCMAKE_C_FLAGS='-march=armv8-a -mtune=generic -mno-outline-atomics'" }
