# pyproject.toml file for building Vowpal Wabbit python wheels

[build-system]
requires = [
    "setuptools",
    "wheel",
    "cmake",
    "ninja",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]  # Python 3.10-3.14 with pybind11
skip = [
    "*musllinux*",  # Only build manylinux wheels
    "*-win32",  # Skip 32-bit Windows builds - scipy doesn't have 32-bit prebuilt wheels
]
# ARM64 tests enabled - pybind11 migration removes Boost dependency that was causing illegal instruction
# test-skip = "*-manylinux_aarch64"  # Removed to enable ARM64 testing
# vw-executor depends on vowpalwabbit, so it must be in test-requires (runs after wheel install)
# Large packages go in before-test with retry to handle transient SSL errors during download
test-requires = ["vw-executor"]
before-test = "pip install pytest pyclean setuptools scipy scikit-learn || pip install pytest pyclean setuptools scipy scikit-learn || pip install pytest pyclean setuptools scipy scikit-learn"
# Exclude e2e_v2: vw_executor uses multiprocessing.Pool(1) which hangs in GitHub Actions containers
# due to pybind11 fork safety issues. Tests pass locally but hang in CI container environment.
test-command = [
    "pyclean {project}/python/tests",
    "pytest {project}/python/tests --ignore={project}/python/tests/e2e_v2",
]
test-sources = "test/"

[tool.cibuildwheel.linux]
before-all = [
    # Install build tools and development packages
    # cibuildwheel runs in Red Hat based Linux container environment (AlmaLinux 8)
    "dnf install -y cmake ninja-build zlib-devel",
    # Install pybind11
    "python -m pip install pybind11",
]
before-build = []
# Use vendored zlib (VW_ZLIB_SYS_DEP=OFF) for self-contained wheels that auditwheel can properly tag
# Enable SIMD optimizations (VW_FEAT_LAS_SIMD=ON) for x64 builds - disabled for ARM64 in override below
# pybind11_DIR is automatically detected by setup.py
environment = { CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF -DVW_FEAT_LAS_SIMD=ON -DVW_FEAT_CSV=ON" }

[tool.cibuildwheel.macos]
before-all = [
    # Install build tools via Homebrew (ccache for C++ compilation caching across Python versions)
    "brew install cmake ninja ccache",
    # Install pybind11
    "python -m pip install pybind11",
    # Reset ccache stats for this job
    "ccache --zero-stats",
]
# Show ccache stats before each Python version build (cp310 = all misses, cp311+ = cache hits)
before-build = "ccache --show-stats || true"
test-command = [
    "pyclean {project}/python/tests",
    "pytest {project}/python/tests --ignore={project}/python/tests/e2e_v2",
]
# Use macOS 11.0+ for compatibility
# pybind11_DIR is automatically detected by setup.py
# ccache: CMAKE_C/CXX_COMPILER_LAUNCHER=ccache caches object files across the 5 Python version builds
# CCACHE_BASEDIR normalizes paths so different build_temp dirs per Python version still get cache hits
environment = { MACOSX_DEPLOYMENT_TARGET="11.0", CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF -DVW_FEAT_CSV=ON -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache", CCACHE_DIR="/tmp/ccache", CCACHE_BASEDIR="/Users/runner/work/vowpal_wabbit/vowpal_wabbit", CCACHE_MAXSIZE="500M", CCACHE_COMPILERCHECK="content" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"

[tool.cibuildwheel.windows]
before-all = [
    # Install pybind11 via pip - setup.py will detect it automatically
    "pip install pybind11",
]
# Use vendored zlib (VW_ZLIB_SYS_DEP=OFF) for self-contained wheels
# pybind11_DIR is automatically detected by setup.py
# CMAKE_GENERATOR specifies Visual Studio 2019 (available on windows-2019 runner)
# Note: ccache/compiler caching requires Ninja generator, but Ninja needs vcvarsall.bat
# which cibuildwheel can't persist across commands. VS generator handles MSVC discovery natively.
environment = { CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF -DVW_FEAT_CSV=ON", CMAKE_GENERATOR="Visual Studio 16 2019" }

# Override for ARM64 Linux builds
# Compiler flags are applied in setup.py based on platform detection
[[tool.cibuildwheel.overrides]]
select = "*_aarch64"
environment = { CMAKE_ARGS="-DVW_ZLIB_SYS_DEP=OFF -DVW_FEAT_LAS_SIMD=OFF -DVW_FEAT_CSV=ON" }
